# sapm

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  makefile
data/: template.json
data/completions/: _sapm  _sapm.ps1  sapm.bash  sapm.elv  sapm.fish
data/config/package_managers/: dnf.json  pacman.json
data/local/: template.json
data/local/completions/: _sapm.ps1
data/local/man/: sapm-info.1  sapm-list.1  sapm.1
data/man/: sapm-find.1  sapm-install.1  sapm-search.1  sapm-uninstall.1  sapm-update.1  sapm.1
data/package_managers/: apt.json  dnf.json  flatpak.json  pacman.json  pamac.json
src/: cli.rs  lib.rs  main.rs  package_manager.rs
src/modules/: cli.rs  package_manager.rs
src/package_managers/: dnf.json
