[package]
name = "sapm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
clap_complete = "4.5.7"
clap_mangen = "0.2.22"
os-release = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
xdg = "2.5.2"

[[bin]]
name = "sapm"
path = "src/bin/sapm.rs"

[[bin]]
name = "man"
path = "src/bin/man.rs"

[[bin]]
name = "completions"
path = "src/bin/completions.rs"
